# my-de-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-broker.yml  docker-compose-mysql.yml  docker-compose-producer.yml  docker-compose-worker.yml  pyproject.toml
airflow/: .env  Dockerfile  airflow.cfg  docker-compose-airflow.yml
airflow/dags/: example_branch_operator_dag.py  example_docker_operator_dag.py  example_dummy_tasks_dag.py  example_first_dag.py  example_parallel_dag.py  example_trigger_dag_operator_dag.py  example_xcom_dag.py  get_danmu_dag.py  hahow_crawler_dag.py  hahow_crawler_docker_producer_dag.py  hahow_crawler_producer_dag.py
data_ingestion/: config.py  get_danmu_tosql.py  hahow_crawler_article.py  hahow_crawler_article_optimized.py  hahow_crawler_common.py  hahow_crawler_course.py  hahow_crawler_course_optimized.py  hahow_crawler_course_optimized_sales.py  mysql.py  pandas.ipynb  producer.py  producer_crawler_hahow_all.py  producer_crawler_hahow_by_queue.py  producer_crawler_hahow_course.py  producer_get_danmu.py  sql_practice.txt  task_get_danmu.py  tasks.py  tasks_crawler_hahow.py  tasks_crawler_hahow_article.py  tasks_crawler_hahow_course.py  worker.py
example/: ecommerce.sql  employees.sql  students.sql
metabase/: docker-compose-metabase.yml
